--- a/CleanArch/CleanArch.Mvc/CleanArch.Mvc.csproj
+++ b/CleanArch/CleanArch.Mvc/CleanArch.Mvc.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArch.Infra.Data\CleanArch.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
